Fix mobile flex gap for footer menu items

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -21,8 +21,12 @@
 
 	&-menu {
 		display: flex;
-		gap: 70px;
-		padding-bottom: 50px;
+		gap: 30px;
+		padding-bottom: 40px;
+
+		@include sc-breakpoint(768) {
+			gap: 70px;
+		}
 	}
 
 	&-social {
